config/k8s/test/mdaw-gateway.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: mdaw-gateway
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: mdaw
spec:
  parentRefs:
    - name: mdaw-gateway
  rules:
    - matches:
        - path:
            type: Exact
            value: /
        - path:
            type: Exact
            value: /frontend
        - path:
            type: Exact
            value: /dashboard
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: traefik
          port: 80
